fixed getStartingRegion