@@ -15,7 +15,7 @@ package bot;
  * This class implements the Bot interface and overrides its Move methods.
  * You can implement these methods yourself very easily now,
  * since you can retrieve all information about the match from variable “state”.
- * When the bot decided on the move to make, it returns an ArrayList of Moves. 
+ * When the bot decided on the move to make, it returns an ArrayList of Moves.
  * The bot is started by creating a Parser to which you add
  * a new instance of your bot, and then the parser is started.
  */
@@ -33,31 +33,25 @@ public class BotStarter implements Bot {
 	/**
 	 * A method that returns which region the bot would like to start on, the pickable regions are stored in the BotState.
 	 * The bots are asked in turn (ABBAABBAAB) where they would like to start and return a single region each time they are asked.
-	 * This method returns one random region from the given pickable regions.
+	 * This method returns the smallest super region
 	 */
 	public Region getStartingRegion(BotState state, Long timeOut) {
-		LinkedList<SuperRegion> AvailableSuperRegions = state.getFullMap()
-				.getSuperRegions();
-		LinkedList<Region> regions;
-		int smallestForce = Integer.MAX_VALUE;
-		int currentForce;
-		Region chosenRegion = null;
-		for (SuperRegion s : AvailableSuperRegions) {
-			regions = s.getSubRegions();
-			currentForce = 0;
-			for (Region r : regions) {
-				currentForce += r.getArmies();
-			}
-			if (currentForce < smallestForce) {
-				smallestForce = currentForce;
-				chosenRegion = s.getSubRegions().getFirst();
-			}
+		ArrayList<Region> availableRegions = state.getPickableStartingRegions();
+		Region minRegion = availableRegions.get(0);
+		int minSuperRegionSize = minRegion.getSuperRegion().getSubRegions().size();
 
+		for (int i = 1; i < availableRegions.size(); i++) {
+			Region region = availableRegions.get(i);
+			int size = region.getSuperRegion().getSubRegions().size();
+
+			if (size < minSuperRegionSize) {
+				minSuperRegionSize = size;
+				minRegion = region;
+			}
 		}
-		return chosenRegion;
-	}
 
-	// get smallest possible starting region
+		return minRegion;
+	}
 
 	@Override
 	/**
